duniverse/menhirLib.20200211/test/static/bad/multiple-type-definition.mly
%type<int> a
%type<bool> a
%start<int> b
%%

a: {}
b: {}
